# PyNRPF

./: .gitignore  CITATION.cff  LICENSE  PRD_v0.1.0_PyNRPF_v0.1.0.md  README.MD  RELEASE_READINESS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publication_archive_smoke.yml  release.yml
config/: databricks_connect.example.yaml  pynrpf_inference.yaml  pynrpf_training_m8_xgb.yaml  run.yaml
docs/: m8_xgb_artifact_contract.md
notebooks/: 00_hello_databricks_connect_notebook.ipynb  01_reproduce_key_numbers.executed.ipynb  01_reproduce_key_numbers.ipynb  02_publication_figures.executed.ipynb  02_publication_figures.ipynb  03_publication_tables.executed.ipynb  03_publication_tables.ipynb  run_experiment.ipynb
outputs/: metrics__local_dev.json  metrics__local_dev.yaml  xgb1_day.pkl  xgb2_timestamp.pkl
outputs/publication_tables/: table1_dataset_split_summary.csv  table2_model_performance_summary.csv  table3_implementation_mw_difference.csv  table3_implementation_result_ausgrid_2023.csv  table4_implementation_ts_difference.csv
publication/1_conference_paper/: README.md
publication/1_conference_paper/src/: m8_xgb.py  (+3 more)
scripts/: install_databricks_cli.ps1  run_local_connect.ps1  setup_local_connect.ps1
src/: __init__.py  evaluate.py  features.py  hello_databricks.py  m7_threshold.py  m8_xgb.py  validate.py
src/pynrpf/: __init__.py  api.py  artifacts.py  config.py  registry.py  scaffold.py  training_config.py  validation.py
tests/: test_api.py  test_artifacts.py  test_config.py  test_scaffold.py  test_training_config.py  test_training_m8_xgb.py
(+27 files in other folders)
